fixed small layout issues

--- a/src/components/navigation/NavigationBeratungsfelder/style.scss
+++ b/src/components/navigation/NavigationBeratungsfelder/style.scss
@@ -17,6 +17,7 @@ $blue: #a5c5e8;
 .filter-button-group {
   padding: 20px;
   border: 1px solid $blue;
+  margin: 0px;
 }
 
 .filter-button {
